--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -98,7 +98,6 @@ Base Classifier: {\bf {\color{red} Perceptron}}
 	\item Linear Classifier
 	\item Binary Classifier
 \end{itemize}
-\bigskip
 
 \begin{minted}[autogobble, breaklines,breakanywhere, fontfamily=helvetica, fontsize=\small]{python}
 class Perceptron:
@@ -112,6 +111,8 @@ class MultiClassPerceptron:
    def predict(self, X_test: list)
 
 \end{minted}
+\bigskip
+- {\bf Parameters} and {\bf Hyperparameters}
 
 \end{frame}
 
@@ -134,6 +135,7 @@ Lexicons and Regular Expressions ($\approx$ 30 Features)
 		    .....
 		}
 		\end{minted}
+	\bigskip
 	\item REGEX
 		\begin{itemize}
 		    \item $ACRONYM$
@@ -185,13 +187,13 @@ Lexicons and Regular Expressions ($\approx$ 30 Features)
 	\begin{tabular}{| l | c | c |} \hline
 		 {\bf Averaging} & {\bf Score} \\
 		 \hline \hline
-		 MACRO & 0.59 \\
+		 MICRO & 0.64 \\
 		  \hline
-		 MICRO & 0.57 \\
+		 MACRO & 0.57 \\
 		  \hline
-		 background & 0.63 \\
-		 method & 0.48 \\
-		 result & 0.55 \\
+		 background & 0.72 \\
+		 method & 0.54 \\
+		 result & 0.46 \\
 		  \hline
 	 \end{tabular}}
 
