Added Sample Dataset in the slides

--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -69,14 +69,12 @@
 \frametitle{Data set}
 
 \begin{itemize}
-
 \item Training Data: 8.2K+ data points
 	\begin{enumerate}
 		\item background - 4.8K
 		\item method - 2.3K
 		\item result - 1.1K
 	\end{enumerate}
-\bigskip
 \item Testing Data: 1.8K data points
 	\begin{enumerate}
 		\item background - 1K
@@ -84,6 +82,22 @@
 		\item result - 0.2K
 	\end{enumerate}
 \end{itemize}
+
+\begin{table}
+	\begin{tabular}{| l | c | c} \hline
+		 4 lead to a decrease in SC absorption in mice & \\
+		 (Deng et al., 2010; Deng et al., 2012). & background \\
+		  \hline
+		 We used an active contour algorithm [10] to segment & \\
+		 organs from 340 coronal slices over the two patients. & method \\
+		  \hline
+		 Similar results were found by Sideris et al. (1999) in & \\
+		 Greece and Mohebali et al. (2005) in Iran. & result \\
+		  \hline
+	 \end{tabular}
+
+\caption{Sample Dataset}
+\end{table}
 
 \end{frame}
 
